# websocket-auth

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/authoriser/: Cargo.toml
crates/authoriser/src/: auth.rs  config.rs  decode.rs  main.rs
crates/handler/: Cargo.toml
crates/handler/src/: main.rs
infrastructure/: .gitignore  cdk.json  eslint.config.mjs  package-lock.json  package.json
infrastructure/lib/: config.ts  stack.ts
