[package]
name = "authoriser"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
jsonwebtoken = "^9.3.0"
lambda_runtime = { workspace = true }
reqwest = { version = "^0.12.3", default-features = false, features = ["rustls-tls", "trust-dns", "__rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }