[package]
name = "handler"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }